@@ -3,6 +3,11 @@ name: "CodeQL Analysis"
 on:
   workflow_dispatch:
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
   push:
     branches: [master]
 
