@@ -7,7 +7,13 @@
 
 name: "Lint ChangeLog"
 on:
+  workflow_dispatch:
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 
 jobs:
   lint-changelog:
