@@ -1,8 +1,15 @@
 # Lints CMake config and C++ source code.
 
 name: "Lint source code"
+
 on:
+  workflow_dispatch:
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 
 jobs:
   lint-cmake-files:
