@@ -1,9 +1,14 @@
 name: "SonarCloud Analysis"
 
 on:
-  push:
-    branches: [master]
+  workflow_dispatch:
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+  push:
     branches: [master]
 
 concurrency:
