@@ -45,6 +45,7 @@ Enhancements:
 - #7373 Upgrade from Qt5 to Qt6 for more modern UI
 - #7374 Add missing DEB and RPM dependencies
 - #7376 Automated weekly build of Docker images for Linux runners
+- #7378 Improve workflow triggers to ensure correct run time
 
 
 # 1.14.6
